FantasmCompiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Start
Rule 1     Start -> code
Rule 2     code -> INICIO DOSPUNTOS cuerpo FIN
Rule 3     cuerpo -> instruccion
Rule 4     cuerpo -> label
Rule 5     label -> LABEL DOSPUNTOS cuerpo
Rule 6     label -> empty
Rule 7     instruccion -> arimtethicInstruction
Rule 8     instruccion -> CompareInstruction
Rule 9     instruccion -> memoryInstruction
Rule 10    instruccion -> jumpInstruction
Rule 11    instruccion -> espInstruction
Rule 12    espInstruction -> ESP PUNTOCOMA cuerpo
Rule 13    espInstruction -> empty
Rule 14    CompareInstruction -> CompareInstName REG COMA REG PUNTOCOMA cuerpo
Rule 15    CompareInstruction -> CompareInstName REG COMA IMM PUNTOCOMA cuerpo
Rule 16    CompareInstruction -> empty
Rule 17    jumpInstruction -> JumpInstName LABEL PUNTOCOMA cuerpo
Rule 18    jumpInstruction -> empty
Rule 19    memoryInstruction -> MemoryInstName REG COMA REG PUNTOCOMA cuerpo
Rule 20    memoryInstruction -> MemoryInstName REG COMA IMM PUNTOCOMA cuerpo
Rule 21    memoryInstruction -> empty
Rule 22    arimtethicInstruction -> ArithmeticInstName REG COMA REG COMA REG PUNTOCOMA cuerpo
Rule 23    arimtethicInstruction -> ArithmeticInstName REG COMA REG COMA IMM PUNTOCOMA cuerpo
Rule 24    arimtethicInstruction -> empty
Rule 25    CompareInstName -> CMPR
Rule 26    CompareInstName -> CMPI
Rule 27    JumpInstName -> SAL
Rule 28    JumpInstName -> SIG
Rule 29    MemoryInstName -> GDR
Rule 30    MemoryInstName -> CAR
Rule 31    MemoryInstName -> MOVR
Rule 32    MemoryInstName -> MOVI
Rule 33    ArithmeticInstName -> SUM
Rule 34    ArithmeticInstName -> RES
Rule 35    ArithmeticInstName -> MOD
Rule 36    ArithmeticInstName -> MUL
Rule 37    ArithmeticInstName -> DDR
Rule 38    ArithmeticInstName -> SAL
Rule 39    empty -> <empty>

Terminals, with rules where they appear

CAR                  : 30
CMPI                 : 26
CMPR                 : 25
COMA                 : 14 15 19 20 22 22 23 23
DDR                  : 37
DOSPUNTOS            : 2 5
ESP                  : 12
FIN                  : 2
GDR                  : 29
IMM                  : 15 20 23
INICIO               : 2
LABEL                : 5 17
MOD                  : 35
MOVI                 : 32
MOVR                 : 31
MUL                  : 36
PUNTOCOMA            : 12 14 15 17 19 20 22 23
REG                  : 14 14 15 19 19 20 22 22 22 23 23
RES                  : 34
SAL                  : 27 38
SIG                  : 28
SUM                  : 33
error                : 

Nonterminals, with rules where they appear

ArithmeticInstName   : 22 23
CompareInstName      : 14 15
CompareInstruction   : 8
JumpInstName         : 17
MemoryInstName       : 19 20
Start                : 0
arimtethicInstruction : 7
code                 : 1
cuerpo               : 2 5 12 14 15 17 19 20 22 23
empty                : 6 13 16 18 21 24
espInstruction       : 11
instruccion          : 3
jumpInstruction      : 10
label                : 4
memoryInstruction    : 9

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . code
    (2) code -> . INICIO DOSPUNTOS cuerpo FIN

    INICIO          shift and go to state 3

    Start                          shift and go to state 1
    code                           shift and go to state 2

state 1

    (0) S' -> Start .



state 2

    (1) Start -> code .

    $end            reduce using rule 1 (Start -> code .)


state 3

    (2) code -> INICIO . DOSPUNTOS cuerpo FIN

    DOSPUNTOS       shift and go to state 4


state 4

    (2) code -> INICIO DOSPUNTOS . cuerpo FIN
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (7) instruccion -> . arimtethicInstruction
    (8) instruccion -> . CompareInstruction
    (9) instruccion -> . memoryInstruction
    (10) instruccion -> . jumpInstruction
    (11) instruccion -> . espInstruction
    (5) label -> . LABEL DOSPUNTOS cuerpo
    (6) label -> . empty
    (22) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA IMM PUNTOCOMA cuerpo
    (24) arimtethicInstruction -> . empty
    (14) CompareInstruction -> . CompareInstName REG COMA REG PUNTOCOMA cuerpo
    (15) CompareInstruction -> . CompareInstName REG COMA IMM PUNTOCOMA cuerpo
    (16) CompareInstruction -> . empty
    (19) memoryInstruction -> . MemoryInstName REG COMA REG PUNTOCOMA cuerpo
    (20) memoryInstruction -> . MemoryInstName REG COMA IMM PUNTOCOMA cuerpo
    (21) memoryInstruction -> . empty
    (17) jumpInstruction -> . JumpInstName LABEL PUNTOCOMA cuerpo
    (18) jumpInstruction -> . empty
    (12) espInstruction -> . ESP PUNTOCOMA cuerpo
    (13) espInstruction -> . empty
    (39) empty -> .
    (33) ArithmeticInstName -> . SUM
    (34) ArithmeticInstName -> . RES
    (35) ArithmeticInstName -> . MOD
    (36) ArithmeticInstName -> . MUL
    (37) ArithmeticInstName -> . DDR
    (38) ArithmeticInstName -> . SAL
    (25) CompareInstName -> . CMPR
    (26) CompareInstName -> . CMPI
    (29) MemoryInstName -> . GDR
    (30) MemoryInstName -> . CAR
    (31) MemoryInstName -> . MOVR
    (32) MemoryInstName -> . MOVI
    (27) JumpInstName -> . SAL
    (28) JumpInstName -> . SIG

    LABEL           shift and go to state 13
    ESP             shift and go to state 19
    FIN             reduce using rule 39 (empty -> .)
    SUM             shift and go to state 20
    RES             shift and go to state 21
    MOD             shift and go to state 22
    MUL             shift and go to state 23
    DDR             shift and go to state 24
    SAL             shift and go to state 25
    CMPR            shift and go to state 26
    CMPI            shift and go to state 27
    GDR             shift and go to state 28
    CAR             shift and go to state 29
    MOVR            shift and go to state 30
    MOVI            shift and go to state 31
    SIG             shift and go to state 32

    cuerpo                         shift and go to state 5
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    arimtethicInstruction          shift and go to state 8
    CompareInstruction             shift and go to state 9
    memoryInstruction              shift and go to state 10
    jumpInstruction                shift and go to state 11
    espInstruction                 shift and go to state 12
    empty                          shift and go to state 14
    ArithmeticInstName             shift and go to state 15
    CompareInstName                shift and go to state 16
    MemoryInstName                 shift and go to state 17
    JumpInstName                   shift and go to state 18

state 5

    (2) code -> INICIO DOSPUNTOS cuerpo . FIN

    FIN             shift and go to state 33


state 6

    (3) cuerpo -> instruccion .

    FIN             reduce using rule 3 (cuerpo -> instruccion .)


state 7

    (4) cuerpo -> label .

    FIN             reduce using rule 4 (cuerpo -> label .)


state 8

    (7) instruccion -> arimtethicInstruction .

    FIN             reduce using rule 7 (instruccion -> arimtethicInstruction .)


state 9

    (8) instruccion -> CompareInstruction .

    FIN             reduce using rule 8 (instruccion -> CompareInstruction .)


state 10

    (9) instruccion -> memoryInstruction .

    FIN             reduce using rule 9 (instruccion -> memoryInstruction .)


state 11

    (10) instruccion -> jumpInstruction .

    FIN             reduce using rule 10 (instruccion -> jumpInstruction .)


state 12

    (11) instruccion -> espInstruction .

    FIN             reduce using rule 11 (instruccion -> espInstruction .)


state 13

    (5) label -> LABEL . DOSPUNTOS cuerpo

    DOSPUNTOS       shift and go to state 34


state 14

    (6) label -> empty .
    (24) arimtethicInstruction -> empty .
    (16) CompareInstruction -> empty .
    (21) memoryInstruction -> empty .
    (18) jumpInstruction -> empty .
    (13) espInstruction -> empty .

  ! reduce/reduce conflict for FIN resolved using rule 6 (label -> empty .)
  ! reduce/reduce conflict for FIN resolved using rule 6 (label -> empty .)
  ! reduce/reduce conflict for FIN resolved using rule 6 (label -> empty .)
  ! reduce/reduce conflict for FIN resolved using rule 6 (label -> empty .)
  ! reduce/reduce conflict for FIN resolved using rule 6 (label -> empty .)
    FIN             reduce using rule 6 (label -> empty .)

  ! FIN             [ reduce using rule 24 (arimtethicInstruction -> empty .) ]
  ! FIN             [ reduce using rule 16 (CompareInstruction -> empty .) ]
  ! FIN             [ reduce using rule 21 (memoryInstruction -> empty .) ]
  ! FIN             [ reduce using rule 18 (jumpInstruction -> empty .) ]
  ! FIN             [ reduce using rule 13 (espInstruction -> empty .) ]


state 15

    (22) arimtethicInstruction -> ArithmeticInstName . REG COMA REG COMA REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> ArithmeticInstName . REG COMA REG COMA IMM PUNTOCOMA cuerpo

    REG             shift and go to state 35


state 16

    (14) CompareInstruction -> CompareInstName . REG COMA REG PUNTOCOMA cuerpo
    (15) CompareInstruction -> CompareInstName . REG COMA IMM PUNTOCOMA cuerpo

    REG             shift and go to state 36


state 17

    (19) memoryInstruction -> MemoryInstName . REG COMA REG PUNTOCOMA cuerpo
    (20) memoryInstruction -> MemoryInstName . REG COMA IMM PUNTOCOMA cuerpo

    REG             shift and go to state 37


state 18

    (17) jumpInstruction -> JumpInstName . LABEL PUNTOCOMA cuerpo

    LABEL           shift and go to state 38


state 19

    (12) espInstruction -> ESP . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 39


state 20

    (33) ArithmeticInstName -> SUM .

    REG             reduce using rule 33 (ArithmeticInstName -> SUM .)


state 21

    (34) ArithmeticInstName -> RES .

    REG             reduce using rule 34 (ArithmeticInstName -> RES .)


state 22

    (35) ArithmeticInstName -> MOD .

    REG             reduce using rule 35 (ArithmeticInstName -> MOD .)


state 23

    (36) ArithmeticInstName -> MUL .

    REG             reduce using rule 36 (ArithmeticInstName -> MUL .)


state 24

    (37) ArithmeticInstName -> DDR .

    REG             reduce using rule 37 (ArithmeticInstName -> DDR .)


state 25

    (38) ArithmeticInstName -> SAL .
    (27) JumpInstName -> SAL .

    REG             reduce using rule 38 (ArithmeticInstName -> SAL .)
    LABEL           reduce using rule 27 (JumpInstName -> SAL .)


state 26

    (25) CompareInstName -> CMPR .

    REG             reduce using rule 25 (CompareInstName -> CMPR .)


state 27

    (26) CompareInstName -> CMPI .

    REG             reduce using rule 26 (CompareInstName -> CMPI .)


state 28

    (29) MemoryInstName -> GDR .

    REG             reduce using rule 29 (MemoryInstName -> GDR .)


state 29

    (30) MemoryInstName -> CAR .

    REG             reduce using rule 30 (MemoryInstName -> CAR .)


state 30

    (31) MemoryInstName -> MOVR .

    REG             reduce using rule 31 (MemoryInstName -> MOVR .)


state 31

    (32) MemoryInstName -> MOVI .

    REG             reduce using rule 32 (MemoryInstName -> MOVI .)


state 32

    (28) JumpInstName -> SIG .

    LABEL           reduce using rule 28 (JumpInstName -> SIG .)


state 33

    (2) code -> INICIO DOSPUNTOS cuerpo FIN .

    $end            reduce using rule 2 (code -> INICIO DOSPUNTOS cuerpo FIN .)


state 34

    (5) label -> LABEL DOSPUNTOS . cuerpo
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (7) instruccion -> . arimtethicInstruction
    (8) instruccion -> . CompareInstruction
    (9) instruccion -> . memoryInstruction
    (10) instruccion -> . jumpInstruction
    (11) instruccion -> . espInstruction
    (5) label -> . LABEL DOSPUNTOS cuerpo
    (6) label -> . empty
    (22) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA IMM PUNTOCOMA cuerpo
    (24) arimtethicInstruction -> . empty
    (14) CompareInstruction -> . CompareInstName REG COMA REG PUNTOCOMA cuerpo
    (15) CompareInstruction -> . CompareInstName REG COMA IMM PUNTOCOMA cuerpo
    (16) CompareInstruction -> . empty
    (19) memoryInstruction -> . MemoryInstName REG COMA REG PUNTOCOMA cuerpo
    (20) memoryInstruction -> . MemoryInstName REG COMA IMM PUNTOCOMA cuerpo
    (21) memoryInstruction -> . empty
    (17) jumpInstruction -> . JumpInstName LABEL PUNTOCOMA cuerpo
    (18) jumpInstruction -> . empty
    (12) espInstruction -> . ESP PUNTOCOMA cuerpo
    (13) espInstruction -> . empty
    (39) empty -> .
    (33) ArithmeticInstName -> . SUM
    (34) ArithmeticInstName -> . RES
    (35) ArithmeticInstName -> . MOD
    (36) ArithmeticInstName -> . MUL
    (37) ArithmeticInstName -> . DDR
    (38) ArithmeticInstName -> . SAL
    (25) CompareInstName -> . CMPR
    (26) CompareInstName -> . CMPI
    (29) MemoryInstName -> . GDR
    (30) MemoryInstName -> . CAR
    (31) MemoryInstName -> . MOVR
    (32) MemoryInstName -> . MOVI
    (27) JumpInstName -> . SAL
    (28) JumpInstName -> . SIG

    LABEL           shift and go to state 13
    ESP             shift and go to state 19
    FIN             reduce using rule 39 (empty -> .)
    SUM             shift and go to state 20
    RES             shift and go to state 21
    MOD             shift and go to state 22
    MUL             shift and go to state 23
    DDR             shift and go to state 24
    SAL             shift and go to state 25
    CMPR            shift and go to state 26
    CMPI            shift and go to state 27
    GDR             shift and go to state 28
    CAR             shift and go to state 29
    MOVR            shift and go to state 30
    MOVI            shift and go to state 31
    SIG             shift and go to state 32

    cuerpo                         shift and go to state 40
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    arimtethicInstruction          shift and go to state 8
    CompareInstruction             shift and go to state 9
    memoryInstruction              shift and go to state 10
    jumpInstruction                shift and go to state 11
    espInstruction                 shift and go to state 12
    empty                          shift and go to state 14
    ArithmeticInstName             shift and go to state 15
    CompareInstName                shift and go to state 16
    MemoryInstName                 shift and go to state 17
    JumpInstName                   shift and go to state 18

state 35

    (22) arimtethicInstruction -> ArithmeticInstName REG . COMA REG COMA REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> ArithmeticInstName REG . COMA REG COMA IMM PUNTOCOMA cuerpo

    COMA            shift and go to state 41


state 36

    (14) CompareInstruction -> CompareInstName REG . COMA REG PUNTOCOMA cuerpo
    (15) CompareInstruction -> CompareInstName REG . COMA IMM PUNTOCOMA cuerpo

    COMA            shift and go to state 42


state 37

    (19) memoryInstruction -> MemoryInstName REG . COMA REG PUNTOCOMA cuerpo
    (20) memoryInstruction -> MemoryInstName REG . COMA IMM PUNTOCOMA cuerpo

    COMA            shift and go to state 43


state 38

    (17) jumpInstruction -> JumpInstName LABEL . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 44


state 39

    (12) espInstruction -> ESP PUNTOCOMA . cuerpo
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (7) instruccion -> . arimtethicInstruction
    (8) instruccion -> . CompareInstruction
    (9) instruccion -> . memoryInstruction
    (10) instruccion -> . jumpInstruction
    (11) instruccion -> . espInstruction
    (5) label -> . LABEL DOSPUNTOS cuerpo
    (6) label -> . empty
    (22) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA IMM PUNTOCOMA cuerpo
    (24) arimtethicInstruction -> . empty
    (14) CompareInstruction -> . CompareInstName REG COMA REG PUNTOCOMA cuerpo
    (15) CompareInstruction -> . CompareInstName REG COMA IMM PUNTOCOMA cuerpo
    (16) CompareInstruction -> . empty
    (19) memoryInstruction -> . MemoryInstName REG COMA REG PUNTOCOMA cuerpo
    (20) memoryInstruction -> . MemoryInstName REG COMA IMM PUNTOCOMA cuerpo
    (21) memoryInstruction -> . empty
    (17) jumpInstruction -> . JumpInstName LABEL PUNTOCOMA cuerpo
    (18) jumpInstruction -> . empty
    (12) espInstruction -> . ESP PUNTOCOMA cuerpo
    (13) espInstruction -> . empty
    (39) empty -> .
    (33) ArithmeticInstName -> . SUM
    (34) ArithmeticInstName -> . RES
    (35) ArithmeticInstName -> . MOD
    (36) ArithmeticInstName -> . MUL
    (37) ArithmeticInstName -> . DDR
    (38) ArithmeticInstName -> . SAL
    (25) CompareInstName -> . CMPR
    (26) CompareInstName -> . CMPI
    (29) MemoryInstName -> . GDR
    (30) MemoryInstName -> . CAR
    (31) MemoryInstName -> . MOVR
    (32) MemoryInstName -> . MOVI
    (27) JumpInstName -> . SAL
    (28) JumpInstName -> . SIG

    LABEL           shift and go to state 13
    ESP             shift and go to state 19
    FIN             reduce using rule 39 (empty -> .)
    SUM             shift and go to state 20
    RES             shift and go to state 21
    MOD             shift and go to state 22
    MUL             shift and go to state 23
    DDR             shift and go to state 24
    SAL             shift and go to state 25
    CMPR            shift and go to state 26
    CMPI            shift and go to state 27
    GDR             shift and go to state 28
    CAR             shift and go to state 29
    MOVR            shift and go to state 30
    MOVI            shift and go to state 31
    SIG             shift and go to state 32

    cuerpo                         shift and go to state 45
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    arimtethicInstruction          shift and go to state 8
    CompareInstruction             shift and go to state 9
    memoryInstruction              shift and go to state 10
    jumpInstruction                shift and go to state 11
    espInstruction                 shift and go to state 12
    empty                          shift and go to state 14
    ArithmeticInstName             shift and go to state 15
    CompareInstName                shift and go to state 16
    MemoryInstName                 shift and go to state 17
    JumpInstName                   shift and go to state 18

state 40

    (5) label -> LABEL DOSPUNTOS cuerpo .

    FIN             reduce using rule 5 (label -> LABEL DOSPUNTOS cuerpo .)


state 41

    (22) arimtethicInstruction -> ArithmeticInstName REG COMA . REG COMA REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> ArithmeticInstName REG COMA . REG COMA IMM PUNTOCOMA cuerpo

    REG             shift and go to state 46


state 42

    (14) CompareInstruction -> CompareInstName REG COMA . REG PUNTOCOMA cuerpo
    (15) CompareInstruction -> CompareInstName REG COMA . IMM PUNTOCOMA cuerpo

    REG             shift and go to state 47
    IMM             shift and go to state 48


state 43

    (19) memoryInstruction -> MemoryInstName REG COMA . REG PUNTOCOMA cuerpo
    (20) memoryInstruction -> MemoryInstName REG COMA . IMM PUNTOCOMA cuerpo

    REG             shift and go to state 49
    IMM             shift and go to state 50


state 44

    (17) jumpInstruction -> JumpInstName LABEL PUNTOCOMA . cuerpo
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (7) instruccion -> . arimtethicInstruction
    (8) instruccion -> . CompareInstruction
    (9) instruccion -> . memoryInstruction
    (10) instruccion -> . jumpInstruction
    (11) instruccion -> . espInstruction
    (5) label -> . LABEL DOSPUNTOS cuerpo
    (6) label -> . empty
    (22) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA IMM PUNTOCOMA cuerpo
    (24) arimtethicInstruction -> . empty
    (14) CompareInstruction -> . CompareInstName REG COMA REG PUNTOCOMA cuerpo
    (15) CompareInstruction -> . CompareInstName REG COMA IMM PUNTOCOMA cuerpo
    (16) CompareInstruction -> . empty
    (19) memoryInstruction -> . MemoryInstName REG COMA REG PUNTOCOMA cuerpo
    (20) memoryInstruction -> . MemoryInstName REG COMA IMM PUNTOCOMA cuerpo
    (21) memoryInstruction -> . empty
    (17) jumpInstruction -> . JumpInstName LABEL PUNTOCOMA cuerpo
    (18) jumpInstruction -> . empty
    (12) espInstruction -> . ESP PUNTOCOMA cuerpo
    (13) espInstruction -> . empty
    (39) empty -> .
    (33) ArithmeticInstName -> . SUM
    (34) ArithmeticInstName -> . RES
    (35) ArithmeticInstName -> . MOD
    (36) ArithmeticInstName -> . MUL
    (37) ArithmeticInstName -> . DDR
    (38) ArithmeticInstName -> . SAL
    (25) CompareInstName -> . CMPR
    (26) CompareInstName -> . CMPI
    (29) MemoryInstName -> . GDR
    (30) MemoryInstName -> . CAR
    (31) MemoryInstName -> . MOVR
    (32) MemoryInstName -> . MOVI
    (27) JumpInstName -> . SAL
    (28) JumpInstName -> . SIG

    LABEL           shift and go to state 13
    ESP             shift and go to state 19
    FIN             reduce using rule 39 (empty -> .)
    SUM             shift and go to state 20
    RES             shift and go to state 21
    MOD             shift and go to state 22
    MUL             shift and go to state 23
    DDR             shift and go to state 24
    SAL             shift and go to state 25
    CMPR            shift and go to state 26
    CMPI            shift and go to state 27
    GDR             shift and go to state 28
    CAR             shift and go to state 29
    MOVR            shift and go to state 30
    MOVI            shift and go to state 31
    SIG             shift and go to state 32

    JumpInstName                   shift and go to state 18
    cuerpo                         shift and go to state 51
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    arimtethicInstruction          shift and go to state 8
    CompareInstruction             shift and go to state 9
    memoryInstruction              shift and go to state 10
    jumpInstruction                shift and go to state 11
    espInstruction                 shift and go to state 12
    empty                          shift and go to state 14
    ArithmeticInstName             shift and go to state 15
    CompareInstName                shift and go to state 16
    MemoryInstName                 shift and go to state 17

state 45

    (12) espInstruction -> ESP PUNTOCOMA cuerpo .

    FIN             reduce using rule 12 (espInstruction -> ESP PUNTOCOMA cuerpo .)


state 46

    (22) arimtethicInstruction -> ArithmeticInstName REG COMA REG . COMA REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> ArithmeticInstName REG COMA REG . COMA IMM PUNTOCOMA cuerpo

    COMA            shift and go to state 52


state 47

    (14) CompareInstruction -> CompareInstName REG COMA REG . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 53


state 48

    (15) CompareInstruction -> CompareInstName REG COMA IMM . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 54


state 49

    (19) memoryInstruction -> MemoryInstName REG COMA REG . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 55


state 50

    (20) memoryInstruction -> MemoryInstName REG COMA IMM . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 56


state 51

    (17) jumpInstruction -> JumpInstName LABEL PUNTOCOMA cuerpo .

    FIN             reduce using rule 17 (jumpInstruction -> JumpInstName LABEL PUNTOCOMA cuerpo .)


state 52

    (22) arimtethicInstruction -> ArithmeticInstName REG COMA REG COMA . REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> ArithmeticInstName REG COMA REG COMA . IMM PUNTOCOMA cuerpo

    REG             shift and go to state 57
    IMM             shift and go to state 58


state 53

    (14) CompareInstruction -> CompareInstName REG COMA REG PUNTOCOMA . cuerpo
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (7) instruccion -> . arimtethicInstruction
    (8) instruccion -> . CompareInstruction
    (9) instruccion -> . memoryInstruction
    (10) instruccion -> . jumpInstruction
    (11) instruccion -> . espInstruction
    (5) label -> . LABEL DOSPUNTOS cuerpo
    (6) label -> . empty
    (22) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA IMM PUNTOCOMA cuerpo
    (24) arimtethicInstruction -> . empty
    (14) CompareInstruction -> . CompareInstName REG COMA REG PUNTOCOMA cuerpo
    (15) CompareInstruction -> . CompareInstName REG COMA IMM PUNTOCOMA cuerpo
    (16) CompareInstruction -> . empty
    (19) memoryInstruction -> . MemoryInstName REG COMA REG PUNTOCOMA cuerpo
    (20) memoryInstruction -> . MemoryInstName REG COMA IMM PUNTOCOMA cuerpo
    (21) memoryInstruction -> . empty
    (17) jumpInstruction -> . JumpInstName LABEL PUNTOCOMA cuerpo
    (18) jumpInstruction -> . empty
    (12) espInstruction -> . ESP PUNTOCOMA cuerpo
    (13) espInstruction -> . empty
    (39) empty -> .
    (33) ArithmeticInstName -> . SUM
    (34) ArithmeticInstName -> . RES
    (35) ArithmeticInstName -> . MOD
    (36) ArithmeticInstName -> . MUL
    (37) ArithmeticInstName -> . DDR
    (38) ArithmeticInstName -> . SAL
    (25) CompareInstName -> . CMPR
    (26) CompareInstName -> . CMPI
    (29) MemoryInstName -> . GDR
    (30) MemoryInstName -> . CAR
    (31) MemoryInstName -> . MOVR
    (32) MemoryInstName -> . MOVI
    (27) JumpInstName -> . SAL
    (28) JumpInstName -> . SIG

    LABEL           shift and go to state 13
    ESP             shift and go to state 19
    FIN             reduce using rule 39 (empty -> .)
    SUM             shift and go to state 20
    RES             shift and go to state 21
    MOD             shift and go to state 22
    MUL             shift and go to state 23
    DDR             shift and go to state 24
    SAL             shift and go to state 25
    CMPR            shift and go to state 26
    CMPI            shift and go to state 27
    GDR             shift and go to state 28
    CAR             shift and go to state 29
    MOVR            shift and go to state 30
    MOVI            shift and go to state 31
    SIG             shift and go to state 32

    CompareInstName                shift and go to state 16
    cuerpo                         shift and go to state 59
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    arimtethicInstruction          shift and go to state 8
    CompareInstruction             shift and go to state 9
    memoryInstruction              shift and go to state 10
    jumpInstruction                shift and go to state 11
    espInstruction                 shift and go to state 12
    empty                          shift and go to state 14
    ArithmeticInstName             shift and go to state 15
    MemoryInstName                 shift and go to state 17
    JumpInstName                   shift and go to state 18

state 54

    (15) CompareInstruction -> CompareInstName REG COMA IMM PUNTOCOMA . cuerpo
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (7) instruccion -> . arimtethicInstruction
    (8) instruccion -> . CompareInstruction
    (9) instruccion -> . memoryInstruction
    (10) instruccion -> . jumpInstruction
    (11) instruccion -> . espInstruction
    (5) label -> . LABEL DOSPUNTOS cuerpo
    (6) label -> . empty
    (22) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (23) arimtethicInstruction -> . ArithmeticInstName REG COMA REG COMA IMM PUNTOCOMA cuerpo
    (24) arimtethicInstruction -> . empty
    (14) CompareInstruction -> . CompareInstName REG COMA REG PUNTOCOMA cuerpo
    (15) CompareInstruction -> . CompareInstName REG COMA IMM PUNTOCOMA cuerpo
    (16) CompareInstruction -> . empty
    (19) memoryInstruction -> . MemoryInstName REG COMA REG PUNTOCOMA cuerpo
    (20) memoryInstruction -> . MemoryInstName REG COMA IMM PUNTOCOMA cuerpo
    (21) memoryInstruction -> . empty
    (17) jumpInstruction -> . JumpInstName LABEL PUNTOCOMA cuerpo
    (18) jumpInstruction -> . empty
    (12) espInstruction -> . ESP PUNTOCOMA cuerpo
    (13) espInstruction -> . empty
    (39) empty -> .
    (33) ArithmeticInstName -> . SUM
    (34) ArithmeticInstName -> . RES
    (35) ArithmeticInstName -> . MOD
    (36) ArithmeticInstName -> . MUL
    (37) ArithmeticInstName -> . DDR
    (38) ArithmeticInstName -> . SAL
    (25) CompareInstName -> . CMPR
    (26) CompareInstName -> . CMPI
    (29) MemoryInstName -> . GDR
    (30) MemoryInstName -> . CAR
    (31) MemoryInstName -> . MOVR
    (32) MemoryInstName -> . MOVI
    (27) JumpInstName -> . SAL
    (28) JumpInstName -> . SIG

    LABEL           shift and go to state 13
    ESP             shift and go to state 19
